@@ -1,3 +1,7 @@
+2013-06-18  Lars Magne Ingebrigtsen  <larsi@gnus.org>
+
+	* shr.el (shr-make-table-1): Implement <td rowspan>.
+
 2013-06-18  Tom Tromey  <tromey@barimba>
 
 	* eww.el (eww-next-url, eww-previous-url, eww-up-url, eww-top-url):
